--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -27,7 +27,7 @@
     style=authoryear,
     sorting=none
 ]{biblatex}
-\addbibresource{citations_proposal.bib}
+\addbibresource{citations.bib}
 \input{variables.tex}
 
 \newenvironment{tight_enumerate}{
