--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1,31 +1,3 @@
-@inproceedings{nufft1,
-      title={A parallel non-uniform fast Fourier transform library based on an ``exponential of semicircle'' kernel}, 
-      author={Barnett, Alex H. and Jeremy F. Magland and Ludvig af Klinteberg},
-      year={2019},
-      booktitle={SIAM Journal on Scientific Computing},
-      pages = {C479--C504},
-      volume = {41},
-      number = {5},
-}
-
-@article{nufft2,
-author = {Greengard, Leslie and June-Yub Lee},
-title = {Accelerating the Nonuniform Fast Fourier Transform},
-journal = {SIAM Review},
-volume = {46},
-number = {3},
-pages = {443--454},
-year = {2004},
-doi = {10.1137/S003614450343200X},
-}
-
-@book{nufft3,
-author = {Bagchi, Sonali and Sanjit K. Mitra},
-title = {The Nonuniform Discrete Fourier Transform and Its Applications in Signal Processing},
-publisher = {Kluwer Academic, Boston},
-year = {1999}
-}
-
 @article{dftimportant,
 author = {Oberst, Ulrich},
 year = {2007},
@@ -35,16 +7,6 @@ volume = {46},
 journal = {SIAM J. Control and Optimization},
 doi = {10.1137/060658242}
 }
-
-@article{sparseintro,
-	author={Gilbert, Anna C. and Piotr Indyk and Mark Iwen and Ludwig Schmidt},
-	journal={IEEE Signal Processing Magazine},
-	title={Recent Developments in the Sparse Fourier Transform: A compressed Fourier transform for big data},
-	year={2014},
-	volume={31},
-	number={5},
-	pages={91--100},
-	doi={10.1109/MSP.2014.2329131}}
 
 @article{cooleytukey,
 title = {An algorithm for the machine calculation of complex Fourier series},
@@ -78,87 +40,6 @@ doi = {10.1090/S0025-5718-1965-0178586-1},
   year        = {2012},
   chapter     = {11},
   url = {http://cnx.org/content/m16336/latest/}
-}
-
-@article{ffts,
-	author={Anthony M. Blake and Ian H. Witten and Michael J. Cree},
-	journal={IEEE Transactions on Signal Processing},
-	title={The Fastest Fourier Transform in the South},
-       	year={2013},
-	volume={61},
-	number={19},
-	pages={4707--4716},
-	doi={10.1109/TSP.2013.2273199}}
-
-@article{warped1,
-author={Anamitra Makur and Sanjit K. Mitra},
-journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
-title={Warped discrete-Fourier transform: Theory and applications},
-year={2001},
-volume={48},
-number={9},
-pages={1086--1093},
-doi={10.1109/81.948436}}
-
-@article{warped2,
-author={Anamitra Makur},
-journal={IEEE Transactions on Circuits and Systems I: Regular Papers},
-title={Computational Schemes for Warped DFT and Its Inverse},
-year={2008},
-volume={55},
-number={9},
-pages={2686--2695},
-doi={10.1109/TCSI.2008.921023}}
-
-@article{earlywarped1,
-author={Alan Oppenheim and Don Johnson and Kenneth Steiglitz},
-journal={Proceedings of the IEEE},
-title={Computation of spectra with unequal resolution using the fast Fourier transform},
-year={1971},
-volume={59},
-number={2},
-pages={299--301},
-doi={10.1109/PROC.1971.8146}}
-
-@article{earlywarped2,
-author={Carlo Braccini and Alan Oppenheim},
-journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
-title={Unequal bandwidth spectral analysis using digital frequency warping},
-year={1974},
-volume={22},
-number={4},
-pages={236--244},
-doi={10.1109/TASSP.1974.1162582}}
-
-@inproceedings{warpedcomparison,
-author={Stefan Wabnik and Gerald Schuller and Ulrich Kr{\"a}mer and Jens Hirschfeld},
-booktitle={Proceedings. (ICASSP '05). IEEE International Conference on Acoustics, Speech, and Signal Processing},
-title={Frequency warping in low delay audio coding},
-year={2005},
-volume={3},
-number={},
-pages={iii/181--iii/184},
-doi={10.1109/ICASSP.2005.1415676}}
-
-@inproceedings{warpedpsycho,
-author={Marek Parfieniuk and Alexander Petrovsky},
-booktitle={Proceedings. (ICASSP '04). IEEE International Conference on Acoustics, Speech, and Signal Processing},
-title={Warped DFT as the basis for psychoacoustic model},
-year={2004},
-volume={4},
-number={},
-pages={iv/185--iv/188},
-doi={10.1109/ICASSP.2004.1326794}
-}
-
-@book{melbook,
-author = {Rabiner, Lawrence and Schafer, Ronald},
-title = {Theory and Applications of Digital Speech Processing},
-year = {2010},
-isbn = {0136034284},
-publisher = {Prentice Hall Press},
-address = {USA},
-edition = {1st},
 }
 
 @techreport{ipp,
@@ -222,38 +103,22 @@ url = {https://projectne10.github.io/Ne10/}}
   doi     = {10.1038/s41592-019-0686-2},
 }
 
-@article{betterbss,
+@book{melbook,
+author = {Rabiner, Lawrence and Schafer, Ronald},
+title = {Theory and Applications of Digital Speech Processing},
+year = {2010},
+isbn = {0136034284},
+publisher = {Prentice Hall Press},
+address = {USA},
+edition = {1st},
+}
+
+@article{bettermusicsep,
   title={Comparison of Frequency-Warped Representations for Source Separation of Stereo Mixtures},
   author={Juan Jos{\'e} Burred and T. Sikora},
   journal={Journal of The Audio Engineering Society},
   year={2006}
 }
-
-@inproceedings{bettermfcc,
-	author={M. J. {Alam} and P. {Kenny} and P. {Dumouchel} and D. {O'Shaughnessy}},
-	booktitle={2014 22nd European Signal Processing Conference (EUSIPCO)},
-	title={Robust speech recognition using warped DFT-based cepstral features in clean and multistyle training},
-	year={2014},
-	volume={},
-	number={},
-	pages={1791-1795},
-	doi={}}
-
-@article{betterfractional,
-  title={Automatic musical instrument classification using fractional fourier transform based- MFCC features and counter propagation neural network},
-  author={D. Bhalke and C. Rao and D. Bormane},
-  journal={Journal of Intelligent Information Systems},
-  year={2015},
-  volume={46},
-  pages={425-446}
-}
-
-@article{bettersparse,
-title = {MRS Sparse-FFT: Reducing Acquisition Time and Artifacts for in vivo 2D Correlation Spectroscopy},
-author = {Lixin Shi and Ovidiu C. Andronesi and Haitham Hassanieh and Badih Ghazi and Dina Katabi and Elfar Adalsteinsson},
-journal = {International Society for Magnetic Resonance in Medicine},
-number = {21},
-year = {2013}}
 
 @article{jbrown,
   title={Calculation of a constant Q spectral transform},
@@ -274,14 +139,6 @@ volume = {236},
 journal = {Journal of computational and applied mathematics},
 doi = {10.1016/j.cam.2011.09.011},
 url = {https://ltfat.github.io/notes/ltfatnote018.pdf}
-}
-
-@inproceedings{jaillet,
-  title={Nonstationary Gabor Frames},
-  author={Florent Jaillet and P. Bal{\'a}zs and M. D{\"o}rfler},
-  year={2009},
-  booktitle={SAMPTA'09, International Conference on SAMPling Theory and Applications},
-  url={https://github.com/ltfat/ltfat.github.io/blob/master/notes/ltfatnote010.pdf},
 }
 
 @misc{invertiblecqt,
@@ -318,23 +175,6 @@ title = {librosa: Audio and Music Signal Analysis in Python},
 doi = {10.25080/Majora-7b98e3ed-003}
 }
 
-@article{warpedold1,
-author = {H{\"a}rm{\"a}, Aki and Karjalainen, Matti and Avioja, Lauri and Välimäki, Vesa and Laine, Unto and Huopaniemi, Jyri},
-year = {2000},
-pages = {1011-1031},
-title = {Frequency-Warped Signal Processing for Audio Applications},
-volume = {48},
-journal = {Journal of the Audio Engineering Society}
-}
-
-@article{warpedold2,
-author = {Burred, Juan José and Sikora, Thomas},
-year = {2006},
-title = {Comparison of frequency-warped representations for source separation of stereo mixtures},
-volume = {2},
-journal = {Audio Engineering Society - 121st Convention Papers}
-}
-
 @article{musicsepgood,
 author = {Cano, Estefanía and Fitzgerald, Derry and Liutkus, Antoine and Plumbley, Mark and Stöter, Fabian-Robert},
 year = {2018},
@@ -355,15 +195,6 @@ journal = {13th International Conference on Digital Audio Effects (DAFx-10)},
 url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
 }
 
-@misc{driedger,
-author = {Driedger, Jonathan and Müller, Meinard and Disch, Sascha},
-year = {2014},
-month = {01},
-pages = {},
-title = {Extending Harmonic-Percussive Separation of Audio Signals},
-url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01-publications/2014_DriedgerMuellerDisch_ExtensionsHPSeparation_ISMIR.pdf}
-}
-
 @article{fitzgerald2,
 author = {Fitzgerald, Derry and Gainza, Mikel},
 year = {2010},
@@ -372,35 +203,6 @@ pages = {},
 title = {Single Channel Vocal Separation using Median Filtering and Factorisation Techniques},
 volume = {4},
 journal = {ISAST Transactions on Electronic and Signal Processing}
-}
-
-@article{tfjigsaw,
-author = {Jaillet, Florent and Torrésani, Bruno},
-year = {2007},
-month = {03},
-pages = {},
-title = {Time-Frequency Jigsaw Puzzle: adaptive multiwindow and multilayered Gabor expansions},
-volume = {05},
-journal = {International Journal of Wavelets, Multiresolution and Information Processing},
-doi = {10.1142/S0219691307001768}
-}
-
-@phdthesis{bayarres,
-author = {Ignacio Irigaray Bayarres},
-title = {Transient and steady-state component separation for audio signals},
-url = {https://iie.fing.edu.uy/publicaciones/2014/Iri14/Iri14.pdf},
-issn = {1688-2806},
-year = {2014},
-school = {Universidad de la Rep{\'u}blica Facultad de Ingenier{\'i}a}
-}
-
-@inproceedings{wmdct,
-author = {Siedenburg, Kai and Doerfler, Monika},
-year = {2011},
-month = {01},
-pages = {},
-title = {Structured sparsity for audio signals},
-booktitle = {Proc. of the 14th International Conference on Digital Audio Effects (DAFx-11), Paris, France}
 }
 
 @incollection{ltfat,
@@ -451,37 +253,6 @@ journal = {Audio, Speech, and Language Processing, IEEE Transactions on},
 doi = {10.1109/TSA.2005.858005}
 }
 
-@article{peass,
-author = {Emiya, Valentin and Vincent, Emmanuel and Harlander, Niklas and Hohmann, Volker},
-year = {2011},
-month = {10},
-pages = {},
-title = {Subjective and Objective Quality Assessment of Audio Source Separation},
-volume = {19},
-journal = {IEEE Transactions on Audio, Speech, and Language Processing},
-doi = {10.1109/TASL.2011.2109381}
-}
-
-@article{pemoq,
-	author={R. {Huber} and B. {Kollmeier}},
-	journal={IEEE Transactions on Audio, Speech, and Language Processing},
-	title={PEMO-Q -- A New Method for Objective Audio Quality Assessment Using a Model of Auditory Perception},
-	year={2006},
-	volume={14},
-	number={6},
-	pages={1902-1911},
-	doi={10.1109/TASL.2006.883259}
-}
-
-@inproceedings{beassvpeass,
-author = {Ward, Dominic and Wierstorf, Hagen and Mason, Russell and Grais, Emad and Plumbley, Mark},
-year = {2018},
-month = {04},
-pages = {},
-title = {BSS Eval or Peass? Predicting the Perception of Singing-Voice Separation},
-doi = {10.1109/ICASSP.2018.8462194}
-}
-
 @article{umx,
   doi = {10.21105/joss.01667},
   year = {2019},
@@ -505,6 +276,17 @@ doi = {10.1002/9781119279860.ch5},
 url = {https://hal.inria.fr/hal-01881425/document}
 }
 
+@article{vincent07,
+author = {Vincent, Emmanuel and Gribonval, Rémi and Plumbley, Mark},
+year = {2007},
+month = {08},
+pages = {1933-1950},
+title = {Oracle estimators for the benchmarking of source separation algorithms},
+volume = {87},
+journal = {Signal Processing},
+doi = {10.1016/j.sigpro.2007.01.016}
+}
+
 @article{umxsota,
 author = {Stöter, Fabian-Robert and Uhlich, Stefan and Liutkus, Antoine and Mitsufuji, Yuki},
 year = {2019},
@@ -516,15 +298,7 @@ journal = {Journal of Open Source Software},
 doi = {10.21105/joss.01667}
 }
 
-@inproceedings{nussl,
-    author = {Ethan Manilow and Prem Seetharaman and Bryan Pardo},
-    title = "The Northwestern University Source Separation Library",
-    publisher = "Proceedings of the 19th International Society of Music Information Retrieval 
-        Conference ({ISMIR} 2018), Paris, France, September 23-27",
-    year = {2018}
-}
-
-@misc{sigsep2018,
+@misc{sisec2018,
       title={The 2018 Signal Separation Evaluation Campaign}, 
       author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
       year={2018},
@@ -532,6 +306,27 @@ doi = {10.21105/joss.01667}
       archivePrefix={arXiv},
       primaryClass={eess.AS}
 }
+
+@inproceedings{transientsep,
+author={J. {Janer} and R. {Marxer} and K. {Arimoto}},
+booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+title={Combining a harmonic-based NMF decomposition with transient analysis for instantaneous percussion separation},
+year={2012},
+pages={281-284},
+doi={10.1109/ICASSP.2012.6287872}}
+
+
+
+@inbook{irm,
+author = {Hummersone, Christopher and Stokes, Toby and Brookes, Tim},
+year = {2014},
+pages = {349-368},
+title = {On the Ideal Ratio Mask as the Goal of Computational Auditory Scene Analysis},
+isbn = {978-3-642-55015-7},
+doi = {10.1007/978-3-642-55016-4_12}
+}
+
+
 
 @software{pandas,
     author       = {The pandas development team},
@@ -641,7 +436,6 @@ volume = {41},
 number = {12},
 issn = {1053-587X},
 doi = {10.1109/78.258082},
-abstract = {The authors introduce an algorithm, called matching pursuit, that decomposes any signal into a linear expansion of waveforms that are selected from a redundant dictionary of functions. These waveforms are chosen in order to best match the signal structures. Matching pursuits are general procedures to compute adaptive signal representations. With a dictionary of Gabor functions a matching pursuit defines an adaptive time-frequency transform. They derive a signal energy distribution in the time-frequency plane, which does not include interference terms, unlike Wigner and Cohen class distributions. A matching pursuit isolates the signal structures that are coherent with respect to a given dictionary. An application to pattern extraction from noisy signals is described. They compare a matching pursuit decomposition with a signal expansion over an optimized wavepacket orthonormal basis, selected with the algorithm of Coifman and Wickerhauser see (IEEE Trans. Informat. Theory, vol. 38, Mar. 1992)},
 journal = {Trans. Sig. Proc.},
 month = {12},
 pages = {3397–3415},
@@ -721,244 +515,44 @@ doi = {10.1109/TASL.2013.2239989},
 url = {https://arpi.unipi.it/retrieve/handle/11568/159584/458549/tasl.pdf}
 }
 
-@article{rtcqt,
-author = {Holighaus, Nicki and Doerfler, Monika and Velasco, Gino Angelo and Grill, Thomas},
-year = {2012},
-month = {09},
-pages = {},
-title = {A Framework for Invertible, Real-Time Constant-Q Transforms},
-volume = {21},
-journal = {IEEE Transactions on Audio, Speech and Language Processing},
-doi = {10.1109/TASL.2012.2234114},
-url = {https://arxiv.org/pdf/1210.0084.pdf}
+@misc{bayesian,
+      title={A Tutorial on Bayesian Optimization}, 
+      author={Peter I. Frazier},
+      year={2018},
+      eprint={1807.02811},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
 }
 
-@article{mdct,
-author = {Wang, Ye and Vilermo, Miikka},
-year = {2012},
+@article{tftradeoff1,
+author = {Simpson, Andrew},
+year = {2015},
+title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks}
+}
+
+@inproceedings{tftradeoff2,
+	author={R. R. {Johnson}},
+	booktitle={2017 Third International Conference on Sensing, Signal Processing and Security (ICSSS)},
+	title={Effect of window length in combining blind source separation and beamforming},
+	year={2017},
+       	pages={447-449},
+	doi={10.1109/SSPS.2017.8071638}
+}
+
+@misc{driedger,
+author = {Driedger, Jonathan and Müller, Meinard and Disch, Sascha},
+year = {2014},
 month = {01},
 pages = {},
-title = {Modified discrete cosine transform - Its implications for audio coding and error concealment},
-volume = {51},
-journal = {Advances in Engineering Software - AES},
-url = {https://smcnus.comp.nus.edu.sg/wp-content/uploads/papers/5.Error_Robust_Audio_Streaming/2002_The_Modified_Discrete_Cosine_Transform-Its_Implications_for_Audio_Coding_and_Error_Concealment.pdf}
+title = {Extending Harmonic-Percussive Separation of Audio Signals},
+url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01-publications/2014_DriedgerMuellerDisch_ExtensionsHPSeparation_ISMIR.pdf}
 }
 
-@misc{honeine2014entropy,
-      title={Entropy of Overcomplete Kernel Dictionaries}, 
-      author={Paul Honeine},
-      year={2014},
-      eprint={1411.0161},
-      archivePrefix={arXiv},
-      primaryClass={cs.IT},
-      url = {https://arxiv.org/pdf/1411.0161.pdf}
-}
-
-@misc{pastor2015mathematics,
-      title={Mathematics of Sparsity and Entropy: Axioms, Core Functions and Sparse Recovery}, 
-      author={Giancarlo Pastor and Inmaculada Mora-Jiménez and Riku Jäntti and Antonio J. Caamaño},
-      year={2015},
-      eprint={1501.05126},
-      archivePrefix={arXiv},
-      primaryClass={cs.IT}
-}
-
-@article{sparsitykowalski,
-author = {Kowalski, Matthieu and Torrésani, Bruno},
-year = {2009},
-month = {09},
-pages = {},
-title = {Sparsity and persistence: Mixed norms provide simple signal models with dependent coefficients},
-volume = {3},
-journal = {Signal Image and Video Processing},
-doi = {10.1007/s11760-008-0076-1}
-}
-
-@article{sparsitykowalski2,
-author = {Kowalski, Matthieu and Torrésani, Bruno},
-year = {2009},
-month = {04},
-pages = {},
-title = {Structured Sparsity: from Mixed Norms to Structured Shrinkage},
-volume = {53},
-journal = {SPARS09-Signal Processing with Adaptive Sparse Structured Representations}
-}
-
-@article{tibshirani,
-author = {Tibshirani, Robert},
+@inproceedings{beatnsgt,
+author = {Holzapfel, Andre and Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Flexer, Arthur},
 year = {2011},
-month = {06},
-pages = {273-282},
-title = {Regression shrinkage selection via the LASSO},
-volume = {73},
-journal = {Journal of the Royal Statistical Society Series B},
-doi = {10.2307/41262671}
-}
-
-@article{shannon1948,
-author={C. E. {Shannon}},
-journal={The Bell System Technical Journal},
-title={A mathematical theory of communication},
-year={1948},
-volume={27},
-number={3},
-pages={379-423},
-doi={10.1002/j.1538-7305.1948.tb01338.x}}
-
-
-@inproceedings{entropy,
-author = {Beadle, Ed and Schroeder, Jim and Moran, Bill and Suvorova, Sofia},
-year = {2008},
 month = {11},
-pages = {1698 - 1704},
-title = {An Overview of Renyi Entropy and Some Potential Applications},
-journal = {Conference Record - Asilomar Conference on Signals, Systems and Computers},
-doi = {10.1109/ACSSC.2008.5074715}
-}
-
-@article{renyi,
-author = {Rényi, A.},
-year = {1961},
-title = {On Measures of Entropy and Information},
-journal = {Proceedings IV Berkeley Symposium on Mathematical Statistics and Probability, Berkeley, 20-30 June 1961},
-volume = {1},
-pages = {547--561}}
-
-@inproceedings{bock1,
-author = {B{\"o}ck, Sebastian and Schedl, Markus},
-year = {2011},
-pages = {},
-title = {Enhanced Beat Tracking with Context-Aware Neural Networks},
-booktitle = {Proceedings of the 14th International Conference on Digital Audio Effects, DAFx 2011},
-}
-
-@inproceedings{bock2,
-  author       = {Sebastian B{\"o}ck and
-                  Florian Krebs and
-                  Gerhard Widmer},
-  title        = {{Accurate Tempo Estimation Based on Recurrent 
-                   Neural Networks and Resonating Comb Filters.}},
-  booktitle    = {{Proceedings of the 16th International Society for 
-                   Music Information Retrieval Conference}},
-  year         = {2015},
-  pages        = {625-631},
-  publisher    = {ISMIR},
-  address      = {Málaga, Spain},
-  venue        = {Málaga, Spain},
-  doi          = {10.5281/zenodo.1416026},
-}
-
-@inproceedings{madmom,
-   title = {{madmom: a new Python Audio and Music Signal Processing Library}},
-   author = {B{\"o}ck, Sebastian and Korzeniowski, Filip and Schl{\"u}ter, Jan and Krebs, Florian and Widmer, Gerhard},
-   booktitle = {Proceedings of the 24th ACM International Conference on Multimedia},
-   year = {2016},
-   pages = {1174--1178},
-   address = {Amsterdam, The Netherlands},
-   doi = {10.1145/2964284.2973795},
-   url = {https://github.com/CPJKU/madmom}
-}
-
-@article{ellis,
-author = {Ellis, Daniel},
-year = {2007},
-pages = {51-60},
-title = {Beat Tracking by Dynamic Programming},
-volume = {36},
-journal = {Journal of New Music Research},
-doi = {10.1080/09298210701653344},
-}
-
-@inproceedings{btrack,
-author = {Stark, Adam and Davies, Matthew and Plumbley, Mark},
-year = {2009},
-title = {Real-time beat-synchronous analysis of musical audio},
-booktitle = {Proceedings of the 12th International Conference on Digital Audio Effects (DAFx-09), Como, Italy},
-}
-
-@article{goto,
-author = {Goto, Masataka},
-year = {2002},
-pages = {},
-title = {An Audio-based Real-time Beat Tracking System for Music With or Without Drum-sounds},
-volume = {30},
-journal = {Journal of New Music Research},
-doi = {10.1076/jnmr.30.2.159.7114}
-}
-
-@article{onsets,
-author = {Bello, Juan and Daudet, Laurent and Abdallah, Samer and Duxbury, Chris and Davies, Mike and Sandler, Mark},
-year = {2005},
-pages = {1035 - 1047},
-title = {A Tutorial on Onset Detection in Music Signals},
-volume = {13},
-journal = {IEE Transactions on Speech and Audio Processing},
-doi = {10.1109/TSA.2005.851998},
-}
-
-@inproceedings{rnnonset,
-  author       = {Florian Eyben and
-                  Sebastian Böck and
-                  Björn W. Schuller and
-                  Alex Graves},
-  title        = {{Universal Onset Detection with Bidirectional Long 
-                   Short-Term Memory Neural Networks.}},
-  booktitle    = {{Proceedings of the 11th International Society for 
-                   Music Information Retrieval Conference}},
-  year         = {2010},
-  pages        = {589--594},
-  publisher    = {ISMIR},
-  address      = {Utrecht, Netherlands},
-  venue        = {Utrecht, Netherlands},
-  doi          = {10.5281/zenodo.1417131},
-}
-
-@inproceedings{bock3,
-author = {B{\"o}ck, Sebastian and Krebs, Florian and Widmer, Gerhard},
-year = {2014},
-title = {A Multi-model Approach to Beat Tracking Considering Heterogeneous Music Styles},
-booktitle = {Conference: 15th International Society for Music Information Retrieval Conference (ISMIR)}
-}
-
-@inproceedings{whiteley,
-  author       = {Nick Whiteley and
-                  Ali Taylan Cemgil and
-                  Simon J. Godsill},
-  title        = {{Bayesian Modelling of Temporal Structure in 
-                   Musical Audio.}},
-  booktitle    = {{Proceedings of the 7th International Conference on 
-                   Music Information Retrieval}},
-  year         = {2006},
-  pages        = {29--34},
-  publisher    = {ISMIR},
-  address      = {Victoria, Canada},
-  venue        = {Victoria, Canada},
-  doi          = {10.5281/zenodo.1415138},
-}
-
-@inproceedings{mcfee,
-author = {McFee, Brian and Ellis, Daniel},
-year = {2014},
-pages = {2154-2158},
-title = {Better beat tracking through robust onset aggregation},
-isbn = {978-1-4799-2893-4},
-journal = {ICASSP, IEEE International Conference on Acoustics, Speech and Signal Processing - Proceedings},
-doi = {10.1109/ICASSP.2014.6853980}
-}
-
-@misc{beatmeta,
-  title={MIREX 2012 AUDIO BEAT TRACKING EVALUATION : NEUROBEAT},
-  author={E. Krebs and S. B{\"o}ck},
-  year={2012}
-}
-
-@article{smcdataset,
-author = {Holzapfel, Andre and Davies, Matthew and Zapata, Jose and Oliveira, João and Gouyon, Fabien},
-year = {2012},
-pages = {2539-2548},
-title = {Selective Sampling for Beat Tracking Evaluation},
-volume = {20},
-journal = {Audio, Speech, and Language Processing, IEEE Transactions on},
-doi = {10.1109/TASL.2012.2205244},
-url = {http://mtg.upf.edu/system/files/publications/HolzapfelEtAl12-taslp.pdf}
+pages = {45-50},
+title = {Advantages of nonstationary gabor transforms in beat tacking},
+doi = {10.1145/2072529.2072542}
 }
