Commit oracle_boxplot (as image for report)

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -278,7 +278,13 @@ The Bayesian optimization process can additionally perform some random parameter
 
 \subsubsection{NSGT oracle mask results}
 
-\includepdf[pages=-,pagecommand={},width=\textwidth]{oracle_boxplot.pdf}
+\begin{figure}[ht]
+	\centering
+%\includepdf[pages=-,pagecommand={},width=\textwidth]{oracle_boxplot.pdf}
+\makebox[\textwidth]{\includegraphics[width=15cm]{./oracle_boxplot.pdf}}
+\caption{Music separation results for NSGT oracle masks}
+\label{fig:nsgtboxplots}
+\end{figure}
 
 \subsection{Open-Unmix-NSGT}
 
